deployments/k8s/00-namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: pulsewatch
  labels:
    app.kubernetes.io/name: pulsewatch
    app.kubernetes.io/part-of: pulsewatch
